# graphics-rules-maker

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CPackConfig.cmake  Readme.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  devicemodel.cpp  devicemodel.h  gamewriterfactory.cpp  gamewriterfactory.h  gamewriterinterface.h  graphicrulesmaker_config.h.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manualsaveconfirmationbox.cpp  manualsaveconfirmationbox.h  videocarddatabase.cpp  videocarddatabase.h
.devcontainer/: Dockerfile  cmake-kits.json  devcontainer.json
cmake/: FindDirectX.cmake  FindDirectX9.cmake  FindMingw.cmake  NSIS.template.in  Win32CrossBundle.cmake
sims2/: CMakeLists.txt  sims2gamewriter.cpp  sims2gamewriter.h  sims2settings.cpp  sims2settings.h  sims2settings.ui
src/: CMakeLists.txt
src/graphicrulesmaker/: CMakeLists.txt  GraphicRulesMakerConfig.cmake.in  GraphicRulesMakerVersion.cmake.in  devicemodel.cpp  graphicrulesmaker_config.h.cmake  videocarddatabase.cpp  videocarddatabase.h
src/graphicrulesmakerui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  gamewriterfactory.cpp  gamewriterfactory.h  graphicrulesmakerui.rc.in  icon.qrc  main.cpp  mainwindow.cpp  mainwindow.ui  manualsaveconfirmationbox.cpp  manualsaveconfirmationbox.h  manualsaveconfirmationbox.ui
src/graphicsrulesmaker/: CMakeLists.txt  GraphicsRulesMakerConfig.cmake.in  GraphicsRulesMakerMacros.cmake  GraphicsRulesMakerVersion.cmake.in  abstractsettingswidget.cpp  abstractsettingswidget.h  devicemodel.cpp  devicemodel.h  gamewriterfactory.cpp  gamewriterfactory.h  gamewriterinterface.h  graphicsrulesmaker_config.h.cmake  graphicsruleswriter.cpp  graphicsruleswriter.h  messagehandler.cpp  messagehandler.h  pci.vendors.cmake  pci.vendors.h.in  videocarddatabase.cpp  videocarddatabase.h
src/graphicsrulesmaker/translations/: GraphicsRulesMaker_nl.ts
src/graphicsrulesmakerhelper/: CMakeLists.txt  helperclient.cpp  helperclient.h  main.cpp
src/graphicsrulesmakerui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  gamewriterfactory.cpp  gamewriterfactory.h  graphicsrulesmakerico.rc.in  graphicsrulesmakerui.rc.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manualsaveconfirmationbox.cpp  manualsaveconfirmationbox.h  messagehandler.cpp  messagehandler.h
src/graphicsrulesmakerui/translations/: GraphicsRulesMakerUi_nl.ts
src/plugins/: CMakeLists.txt
src/plugins/simcity4/: CMakeLists.txt  simcity4gamewriter.cpp  simcity4gamewriter.h  simcity4settings.cpp  simcity4settings.h  simcity4settings.ui  simcity4variables.h
src/plugins/simcity4/translations/: SimCity4GameWriter_nl.ts
src/plugins/sims-castawaystories/: CMakeLists.txt  simscsgamewriter.cpp  simscsgamewriter.h  simscssettings.cpp  simscssettings.h  simscssettings.ui  simscsvariables.h
src/plugins/sims-castawaystories/translations/: SimsCastawayStoriesGameWriter_nl.ts
src/plugins/sims-lifestories/: CMakeLists.txt  simslsgamewriter.cpp  simslsgamewriter.h  simslssettings.cpp  simslssettings.h  simslssettings.ui  simslsvariables.h
src/plugins/sims-lifestories/translations/: SimsLifeStoriesGameWriter_nl.ts
src/plugins/sims-petstories/: CMakeLists.txt  simspsgamewriter.cpp  simspsgamewriter.h  simspssettings.cpp  simspssettings.h  simspssettings.ui  simspsvariables.h
src/plugins/sims-petstories/translations/: SimsPetStoriesGameWriter_nl.ts
src/plugins/sims2/: CMakeLists.txt  sims2gamewriter.cpp  sims2gamewriter.h  sims2settings.cpp  sims2settings.h  sims2settings.ui  sims2variables.h
src/plugins/sims2/translations/: Sims2GameWriter_nl.ts
src/plugins/sims2bodyshop/: CMakeLists.txt  sims2bodyshopgamewriter.cpp  sims2bodyshopgamewriter.h  sims2bodyshopsettings.cpp  sims2bodyshopsettings.h  sims2bodyshopsettings.ui  sims2bodyshopvariables.h
src/plugins/sims2bodyshop/translations/: Sims2BodyShopGameWriter_nl.ts
translations/: GraphicsRulesMakerUi_nl.ts  GraphicsRulesMaker_nl.ts  SimCity4GameWriter_nl.ts  Sims2BodyShopGameWriter_nl.ts  Sims2GameWriter_nl.ts  SimsCastawayStoriesGameWriter_nl.ts  SimsLifeStoriesGameWriter_nl.ts  SimsPetStoriesGameWriter_nl.ts
